update: add header and login button to homepage (#1)
* new (still placeholder?) homepage for https://clemat.is
added a header and login button linking to auth.clemat.is

* new (still placeholder?) homepage for https://clemat.is
added a header and login button linking to auth.clemat.is

* add style.css to default.nix

* forgor :cook:

* modified PR

--- a/configuration/homepage/index.html
+++ b/configuration/homepage/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>83 Atelier</title>
+  <title>83-Atelier</title>
+  <link rel="icon" href="favicon.png" />
 
-    <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+<div class="header">
+  <div class="logo">83-Atelier</div>
+  <a href="https://auth.clemat.is" class="auth-button">Login</a>
+</div>
 
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <img src="background.webp" alt="Full Screen Image" />
-  </body>
+<img src="background.webp" alt="Full Screen Image" class="fullscreen-image" />
+</body>
 </html>
